fix: Fix overflow items from projectionScreen

--- a/src/components/ProjectionScreen/style.css
+++ b/src/components/ProjectionScreen/style.css
@@ -3,6 +3,7 @@
     width: 100%;
     border: 7px solid yellow;
     padding: 20px;
+    overflow-y: auto;
 }
 
 .projection-wrapper {
